[project]
name = "raceconditionrunning-github-io"
version = "0.1.0"
description = "Website for Race Condition Running (RCR)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpxpy==1.6.2",
    "haversine==2.9.0",
    "icalendar==6.1.0",
    "joblib==1.4.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "tqdm==4.67.1",
]
